# fitness-api

./: .dockerignore  .env.dev.example  AGENTS.md  CLAUDE.md  DATABASE.md  Dockerfile  Makefile  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml
.github/workflows/: pull_request.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_runs_table.py  09ac6bfc26af_add_sync_metadata_table.py  16b1cd7556b0_add_oauth_credentials_table.py  1d4f4234bffa_add_synced_runs_table_for_google_.py  62128cf4b300_add_tags_tables.py  6dda1ac0535c_add_shoe_aliases_table.py  8995ea55de0a_add_synced_run_workouts_table.py  9d4c4e3c66b3_add_name_to_runs_and_rides.py  9f3a1c7b2d40_add_shoe_notes_table.py  a5f9c60f97e4_add_run_workouts_table_and_runs_fk.py  a7c3e1b9d2f4_add_shoe_warning_mileage_columns.py  add_hevy_tables.py  add_lifts_tables.py  b3a7e9f2c1d4_create_rides_table.py  b8d4f2a6c1e9_rename_shoe_mileage_columns.py  bd552ba841fd_add_name_to_runs_history.py  c2f8d4a91e07_create_synced_rides_table.py  c4e9b1f7a2d8_add_runs_notes_column.py  c9e2f1a7b3d5_add_shoe_size_purchase_date.py  d1f4a8c62b90_add_shoe_brand_model_color.py  d982550cf8a6_add_runs_history_table_and_extend_runs_.py  e1a2b3c4d5f6_add_apple_health_ingestion.py  e7b3c9d15a24_shoe_brand_model_not_null_drop_name.py  f2b3c4d5e6a7_add_duplicate_of_id.py  fb8efa3c6e02_add_synced_lifts_table_for_google_.py
api/: .env.dev.example  README.md  pyproject.toml
api/alembic/versions/: a01ab67814b6_add_users_table.py
api/fitness/app/: app.py  auth.py  env_loader.py  oauth.py
api/fitness/app/routers/: metrics.py  mmf.py  oauth.py  run.py  shoes.py  strava.py  summary.py  sync.py
api/fitness/db/: runs.py  shoes.py  synced_runs.py  users.py
api/fitness/integrations/google/: calendar_client.py
api/fitness/load/: strava.py
api/tests/app/: conftest.py  test_auth.py  test_jwt_validation.py
api/tests/app/oauth_router/: test_oauth_endpoints.py
api/tests/app/run_router/: test_run_router.py
api/tests/load/: test_strava_load.py
dashboard/: README.md  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  store.ts
fitness/agg/: __init__.py  lifts.py  mileage.py  seconds.py  shoes.py  training_load.py
fitness/app/: app.py  auth.py  cardio_export.py  constants.py  dependencies.py  env_loader.py  ingest_auth.py  models.py  oauth.py  oauth_state.py
fitness/auth/: tokens.py
fitness/config/: env_files.py  shoes.py
fitness/db/: __init__.py  api_tokens.py  connection.py  hevy.py  lifts.py  oauth_credentials.py  rides.py  run_workouts.py  runs.py  runs_history.py  shoe_notes.py  shoes.py  sync_metadata.py  synced_lifts.py  synced_rides.py  synced_run_workouts.py  synced_runs.py  tags.py
fitness/load/: strava.py
fitness/mcp/: server.py
fitness/models/: __init__.py  hae.py  lift.py  responses.py  ride.py  ride_detail.py  run.py  run_detail.py  run_workout.py  shoe.py  shoe_note.py  sync.py  tag.py  training_load.py  user.py
fitness/scripts/: tokens.py
fitness/utils/: duplicate_matching.py  timezone.py
k8s/argocd/: applications.yaml  image-updater.yaml
k8s/base/: configmap.yaml  deployment.yaml  service.yaml
k8s/prod/: configmap-env.yaml  deployment-patch.yaml  kustomization.yaml  namespace.yaml  secret-provider-class.yaml  service-account.yaml
k8s/staging/: configmap-env.yaml  deployment-patch.yaml  kustomization.yaml  namespace.yaml  secret-provider-class.yaml  service-account.yaml  tailscale-ingress.yaml
scripts/: backfill_shoe_brand_model.py
tests/: conftest.py
tests/_factories/: __init__.py  hevy.py  lift.py  mmf_activity.py  ride.py  run.py  strava_activity_with_gear.py  strava_ride_activity.py
tests/agg/: test_mileage.py  test_seconds.py  test_shoes.py  test_training_load.py
tests/app/: conftest.py  test_auth.py  test_cardio_export.py  test_date_range_queries.py  test_ingest.py  test_jwt_validation.py  test_middleware.py  test_oauth_state.py
tests/auth/: test_tokens.py
tests/db/: test_connection.py  test_rides.py  test_runs_date_range.py  test_runs_history.py  test_shoe_aliases.py  test_sync_metadata.py  test_users.py
(+108 files in other folders)
