[project]
name = "fitness"
version = "0.1.0"
description = "Analysis of my fitness data"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "psycopg[binary,pool]>=3.3.4",
    "alembic>=1.18.4",
    "typing_extensions>=4.0.0",
    "PyJWT[crypto]>=2.13.0",
    "cryptography>=49.0.0",
]

[project.scripts]
app = "fitness.app:app"

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "ipython>=9.14.1",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    # Pinned <0.0.25: 0.0.25+ introduces new type-checking rules that require separate cleanup.
    "ty>=0.0.23,<0.0.25",
    "testcontainers[postgres]>=4.14.2",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end API + DB workflow tests",
    "integration: tests requiring real external API credentials (Strava, Google)",
]
addopts = "--cov=fitness --cov-report html"
